context menu is working, starting to work with the filter offcanvas

--- a/kontext/src/index.html
+++ b/kontext/src/index.html
@@ -27,5 +27,17 @@
 
   <!-- Put App.js last in your javascript imports -->
   <script src="./assets/js/core/source/App.min.js"></script>
+
+
+  <script src="./assets/js/libs/spin.js/spin.min.js"></script>
+  <script src="./assets/js/libs/autosize/jquery.autosize.min.js"></script>
+  <!--<script src="./assets/js/core/source/App.js"></script>-->
+  <!--<script src="./assets/js/core/source/AppNavigation.js"></script>-->
+  <!--<script src="./assets/js/core/source/AppOffcanvas.js"></script>-->
+  <!--<script src="./assets/js/core/source/AppCard.js"></script>-->
+  <!--<script src="./assets/js/core/source/AppForm.js"></script>-->
+  <!--<script src="./assets/js/core/source/AppNavSearch.js"></script>-->
+  <!--<script src="./assets/js/core/source/AppVendor.js"></script>-->
+  <!--<script src="./assets/js/core/demo/Demo.js"></script>-->
 </body>
 </html>
