--- a/kontext/src/index.html
+++ b/kontext/src/index.html
@@ -73,7 +73,6 @@
     </style>
 </head>
 <body class="menubar-hoverable header-fixed menubar-pin ">
-
   <app-root>
      <!-- loading layout replaced by app after startupp -->
       <div class="app-loading">
@@ -95,5 +94,15 @@
   <script src="./assets/js/libs/autosize/jquery.autosize.min.js"></script>
   <script src="./assets/js/libs/spin.js/spin.min.js"></script>
   <script src="./assets/js/core/source/App.min.js"></script>
+
+<div class="container">
+    <div id="toast-container" class="toast-top-full-width" aria-live="polite" role="alert">
+      <div class="toast toast-info" style="">
+        <div class="toast-message">item copied!</div>
+      </div>
+    </div>
+
+  </div>
+
 </body>
 </html>
