--- a/kontext/src/index.html
+++ b/kontext/src/index.html
@@ -72,7 +72,8 @@
       }
     </style>
 </head>
-<body class="menubar-hoverable header-fixed menubar-pin ">
+<!--<body class="menubar-hoverable header-fixed menubar-first menubar-pin">-->
+<body class="menubar-hoverable header-fixed menubar-pin">
   <app-root>
      <!-- loading layout replaced by app after startupp -->
       <div class="app-loading">
@@ -81,7 +82,6 @@
           <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
         </svg>
       </div>
-
   </app-root>
 
   <!-- BEGIN JAVASCRIPT -->
@@ -95,14 +95,12 @@
   <script src="./assets/js/libs/spin.js/spin.min.js"></script>
   <script src="./assets/js/core/source/App.min.js"></script>
 
-<div class="container">
+  <div class="container">
     <div id="toast-container" class="toast-top-full-width" aria-live="polite" role="alert">
       <div class="toast toast-info" style="">
         <div class="toast-message">item copied!</div>
       </div>
     </div>
-
   </div>
-
 </body>
 </html>
