scaffolding for homepage

--- a/kontext/src/index.html
+++ b/kontext/src/index.html
@@ -12,7 +12,10 @@
   <link type="text/css" rel="stylesheet" href="./assets/css/theme-5/materialadmin.css" />
   <link type="text/css" rel="stylesheet" href="./assets/css/theme-5/font-awesome.min.css" /> <!--Font Awesome Icon Font-->
   <link type="text/css" rel="stylesheet" href="./assets/css/theme-5/material-design-iconic-font.min.css" /> <!--Material Design Iconic Font-->
-		<!-- Additional CSS includes -->
+	<link type="text/css" rel="stylesheet" href="./assets/css/theme-default/libs/morris/morris.core.css">
+	<link type="text/css" rel="stylesheet" href="./assets/css/theme-default/libs/rickshaw/rickshaw.css">
+
+  <!-- Additional CSS includes -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style type="text/css">
 
@@ -94,6 +97,7 @@
   <script src="./assets/js/libs/autosize/jquery.autosize.min.js"></script>
   <script src="./assets/js/libs/spin.js/spin.min.js"></script>
   <script src="./assets/js/core/source/App.min.js"></script>
+  <script src="./assets/js/libs/sparkline/jquery.sparkline.min.js"></script>
 
   <div class="container">
     <div id="toast-container" class="toast-top-full-width" aria-live="polite" role="alert">
